--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.github.fykidwai</groupId>
@@ -7,7 +6,7 @@
         <version>1.15</version>
     </parent>
     <artifactId>mssc-brewery-bom</artifactId>
-    <version>1.14-SNAPSHOT</version>
+    <version>1.14</version>
     <packaging>pom</packaging>
     <name>mssc-brewery-bom</name>
     <url>https://github.com/fykidwai/mssc-brewery-bom</url>
@@ -15,7 +14,7 @@
         <url>https://github.com/fykidwai/mssc-brewery-bom</url>
         <connection>scm:git:https://github.com/fykidwai/mssc-brewery-bom.git</connection>
         <developerConnection>scm:git:https://fykidwai@github.com/fykidwai/mssc-brewery-bom.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>v1.14</tag>
     </scm>
     <issueManagement>
         <url>https://github.com/fykidwai/mssc-brewery-bom/issues</url>
